# Reti-Pioneer

./: .gitignore  .gitmodules  LICENSE  README.md  inference.py  main.py  pyproject.toml
data/: README.txt
data/UKBCompressed/: UKB_RETF.npz  UKB_mqd.npz  UKB_vim.npz  UKB_y0.npz  UKB_y10.npz  UKB_y5.npz
dataset/: UKBDataset.py
model/: QualityAware.py  RETFound.py  RetiPioneer.py  base.py  mamba.py
utils/: functional.py  metrics.py  run.py
