[project]
name = "reti-pioneer"
version = "0.1.0"
description = "Low-Cost Pre-Trained Oculomics Models for Multimorbidity Detection and Prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "pytorch-ignite>=0.5.2",
    "scikit-image>=0.25.2",
    "tensorboardx>=2.6.4",
    "timm==0.9.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
